<resources>
    <string name="app_name">FitnessBuddy</string>
    <string name="title_activity_fitness_home">FitnessHomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_address">Start Address:</string>
    <string name="stop_address">Start Address:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="gps_enabled">GPS Enabled</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="cell_text">Run at %1$s</string>
    <string name="stop_position">Stop Position</string>
    <string name="start_position">Start Position</string>
    <string name="start_time">Start Time:</string>
    <string name="stop_time">Stop Time:</string>
    <string name="elapsed_speed">Your Speed:</string>
    <string name="result">Result</string>
    <string name="elapsed_distance">Distance:</string>
</resources>
